@@ -1,3 +1,10 @@
+2004-08-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* graph.test: Fixed [SF Tcllib Bug 1003671]: Ensured that
+	* tree.test:  (de)serialization of empty graph/tree is
+	* graph.tcl:  working properly. Thanks to Bhushit Joshipura
+	* tree.tcl:   <bhushit@users.sf.net> for the report.
+
 2004-08-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* graph.test: Fixed [SF Tcllib Bug 1000716]: Unset of last
